# Whisper-cli

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  README.md  Roadmap.md  audio_recorder.py  audio_retry_manager.py  config.py  diagnose_input.py  dic.txt  gemini_corrector.py  gemini_transcriber.py  hotkey_listener.py  main.py  notification_utils.py  proxy_test.py  pyproject.toml  quick-start.sh  requirements.txt  segment_processor.py  service_registry.py  session_mode_manager.py  setup_env.sh  start.sh  text_input_manager.py  timer_utils.py  transcriber.py  voice_activity_detector.py  启动脚本.sh  项目结构.md
docs/: context_research.md
docs/memo/: 1-OVERVIEW.md  2-CODEBASE.md  3-ROADMAP.md  4-QUALITY.md  TS_REFACTOR_PLAN.md  cards.md  handoff.md  memory-timeline.md  progress_tracker.md
python/: audio_recorder.py  config.py  correction_memory.py  dic.txt  dictionary_manager.py  gemini_transcriber.py  hotkey_listener.py  requirements.txt  timer_utils.py  usage_guide.py
typescript/: .env.example  .eslintrc.json  PROXY_GUIDE.md  README.md  dic.txt  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
typescript/src/: cli.ts  index.ts
typescript/src/core/: config.ts
typescript/src/managers/: clipboard-manager.ts  dictionary-manager.ts  segment-processor.ts  session-manager.ts
typescript/src/services/: audio-recorder.ts  gemini-client.ts  hotkey-listener.ts
typescript/src/types/: audio.ts  hotkey.ts  index.ts  session.ts
typescript/src/utils/: errors.ts  file-adapter.ts  logger.ts  result.ts  text-utils.ts
